styling to make sure the button doesn't jump when pagination to Review form. Reporting Form Add Review button and Pagination [ch6238]

--- a/src/modules/common/less/form.less
+++ b/src/modules/common/less/form.less
@@ -43,7 +43,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  min-height: 28.75rem;
+  min-height: 30rem;
   padding: 0 2rem;
 
   > li {
